# GetTheAlbum

./: README.md
get_the_album/: Cargo.toml  Dioxus.toml
get_the_album/assets/styling/: audio.css  comments.css  echo.css  main.css  navbar.css  song.css
get_the_album/src/: main.rs
get_the_album/src/assets/: styles.css
get_the_album/src/components/: audio_player.rs  echo.rs  footer.rs  hero.rs  mod.rs  navbar.rs  newsletter.rs  terms_agreement_button.rs  terms_button.rs  terms_of_service.rs
get_the_album/src/views/: comments.rs  home.rs  mod.rs  song.rs  terms.rs
get_the_album/src/views/songs/: mod.rs  song_1.rs  song_11.rs  song_15.rs  song_19.rs  song_2.rs  song_22.rs  song_26.rs  song_27.rs  song_4.rs  song_5.rs  song_6.rs  song_7.rs  song_9.rs
